--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -18,20 +18,22 @@
         fill: #f00;
         stroke-width: 0;
       }
+      .legend_text {
+        font-family: Lato;
+        font-size: 8pt;
+        font-weight: 400;
+      }
       .xaxis,
       .yaxis {
-
       }
       .yaxis {
         path {
           stroke: #ccc;
-
         }
         text {
-
           font-family: Lato;
-          font-weight: 300;
           font-size: 7pt;
+          font-weight: 300;
         }
       }
     }
